# coder

./: README.md  README_POST_CREATE.md  pyproject.toml
scratch_space/code_/: pipe01.ipynb
src/coder/config/: coder_config.py  coder_paths.py
tests/config/: test_coder_paths.py  test_env_vars.py
